@@ -4,7 +4,6 @@
 	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 
 	<modelVersion>4.0.0</modelVersion>
-	<!-- Tycho requires Maven 3 -->
 	<prerequisites>
 		<maven>3.0</maven>
 	</prerequisites>
@@ -16,13 +15,12 @@
 		<relativePath>../../releng/de.abg.jreichert.repositorytarget.config.parent/pom.xml</relativePath>
 	</parent>
 
-	<groupId>de.abg.jreichert.repositorytarget</groupId>
 	<artifactId>de.abg.jreichert.repositorytarget.parent</artifactId>
-	<version>0.1.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
 	<properties>
 		<maven-resources-plugin.version>2.6</maven-resources-plugin.version>
+		<maven-compiler-plugin-version>3.1</maven-compiler-plugin-version>
 		<maven-antrun-plugin.version>1.7</maven-antrun-plugin.version>
 		<maven-install-plugin.version>2.4</maven-install-plugin.version>
 		<maven-surefire-plugin.version>2.16</maven-surefire-plugin.version>
@@ -34,13 +32,26 @@
 		<maven-pmd-plugin.version>3.0.1</maven-pmd-plugin.version>
 		<build-helper-maven-plugin.version>1.8</build-helper-maven-plugin.version>
 		<eclipse-signing-maven-plugin.version>1.0.5</eclipse-signing-maven-plugin.version>
-		<fornax-oaw-m2-plugin.version>3.4.0</fornax-oaw-m2-plugin.version>
-		<xtend-maven-plugin.version>2.5.0</xtend-maven-plugin.version>
-		<xtend-library.version>2.5.0</xtend-library.version>
+		<exec-maven-plugin-version>1.2.1</exec-maven-plugin-version>
+		<xtend-maven-plugin-version>2.5.0</xtend-maven-plugin-version>
+		<xtend-library-version>2.5.0</xtend-library-version>
+		<xtext-version>2.5.0</xtext-version>
 		<jacoco-maven-plugin.version>0.6.3.201306030806</jacoco-maven-plugin.version>
 		<junit-version>4.11</junit-version>
 		<local-build-platform.version>[3.8,4.3)</local-build-platform.version>
-		<ui.test.vmargs></ui.test.vmargs>
+		<java-compile-version>1.7</java-compile-version>
+		<maven.compiler.source>1.7</maven.compiler.source>
+		<maven.compiler.target>1.7</maven.compiler.target>
+		<project.encoding>UTF-8</project.encoding>
+		<file.encoding>${project.encoding}</file.encoding>
+		<project.build.sourceEncoding>${project.encoding}</project.build.sourceEncoding>
+		<project.reporting.outputEncoding>${project.encoding}</project.reporting.outputEncoding>
+		<memoryInitial>128m</memoryInitial>
+		<memoryMaximum>1024m</memoryMaximum>
+		<memoryArgs>-Xms${memoryInitial} -Xmx${memoryMaximum} -XX:PermSize=256m -XX:MaxPermSize=256m</memoryArgs>
+		<encodingArgs>-Dfile.encoding=${file.encoding}</encodingArgs>
+		<loggingArgs>-Dlog4j.configuration=file:${project.basedir}/../../plugins/de.abg.jreichert.repositorytarget.activeannotations/log4j.xml</loggingArgs>
+		<skip.mwe2>true</skip.mwe2>
 		<coverageAgent></coverageAgent>
 		<it.coverage.argLine></it.coverage.argLine>
 		<RTG-local-targetrepository>file:../../releng/de.abg.jreichert.repositorytarget.repository/target/repository</RTG-local-targetrepository>
@@ -65,21 +76,28 @@
 		</plugins>
 		<pluginManagement>
 			<plugins>
-				<!-- TYCHO -->
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-compiler-plugin</artifactId>
+					<version>${maven-compiler-plugin-version}</version>
+					<configuration>
+						<source>>${java-compile-version}</source>
+						<target>>${java-compile-version}</target>
+					</configuration>
+				</plugin>
 				<plugin>
 					<groupId>org.eclipse.tycho</groupId>
 					<artifactId>tycho-compiler-plugin</artifactId>
 					<version>${tycho-version}</version>
 					<configuration>
-						<encoding>UTF-8</encoding>
-						<meminitial>128m</meminitial>
-						<maxmem>1024m</maxmem>
-						<source>7.0</source>
-						<target>7.0</target>
+						<encoding>${project.encoding}</encoding>
+						<meminitial>${memoryInitial}</meminitial>
+						<maxmem>${memoryMaximum}</maxmem>
+						<source>${java-compile-version}</source>
+						<target>${java-compile-version}</target>
 						<verbose>true</verbose>
 					</configuration>
 				</plugin>
-				<!-- enable source bundle generation -->
 				<plugin>
 					<groupId>org.eclipse.tycho</groupId>
 					<artifactId>tycho-surefire-plugin</artifactId>
@@ -87,7 +105,7 @@
 					<configuration>
 						<useUIHarness>false</useUIHarness>
 						<useUIThread>false</useUIThread>
-						<argLine>${ui.test.vmargs}</argLine><!-- different for mac/not mac -->
+						<argLine>${memoryArgs} ${ui.test.vmargs} ${it.coverage.argLine} ${loggingArgs}</argLine>
 					</configuration>
 				</plugin>
 				<plugin>
@@ -95,13 +113,12 @@
 					<artifactId>tycho-p2-repository-plugin</artifactId>
 					<version>${tycho-version}</version>
 				</plugin>
-				<!-- APACHE MAVEN PLUGINS -->
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-resources-plugin</artifactId>
 					<version>${maven-resources-plugin.version}</version>
 					<configuration>
-						<encoding>UTF-8</encoding>
+						<encoding>${project.encoding}</encoding>
 					</configuration>
 				</plugin>
 				<plugin>
@@ -126,6 +143,9 @@
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-surefire-plugin</artifactId>
 					<version>${maven-surefire-plugin.version}</version>
+					<configuration>
+						<argLine>${coverageAgent}</argLine>
+					</configuration>
 				</plugin>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
@@ -155,8 +175,7 @@
 					<artifactId>maven-checkstyle-plugin</artifactId>
 					<version>${maven-checkstyle-plugin.version}</version>
 					<configuration>
-						<excludes>**org/eclipse.**:**/internal/**:**antlr**:**/parseTree**:**Abstract**RuntimeModule**:**SetupGenerated**:**Abstract**Validator**:
-							**GrammarAccess**:**Abstract**UiModule**:**Abstract**ProposalProvider**:**/mm/**:**/shapes/shapes/**:**/styles/styles/**:**Abstract**SemanticSequencer**</excludes>
+						<excludes>**org/eclipse.**:**/internal/**:**antlr**:**/parseTree**:**Abstract**RuntimeModule**:**SetupGenerated**:**Abstract**Validator**:**GrammarAccess**:**Abstract**UiModule**:**Abstract**ProposalProvider**:**Abstract**SemanticSequencer**</excludes>
 					</configuration>
 				</plugin>
 				<plugin>
@@ -166,7 +185,7 @@
 					<configuration>
 						<findbugsXmlOutput>true</findbugsXmlOutput>
 						<failOnError>false</failOnError>
-						<excludeFilterFile>findbugs-exclude.xml</excludeFilterFile>
+						<excludeFilterFile>${session.executionRootDirectory}/../org.eclipse.xtext.example.fowlerdsl.parent/findbugs-exclude.xml</excludeFilterFile>
 					</configuration>
 					<executions>
 						<execution>
@@ -215,32 +234,61 @@
 					<version>${eclipse-signing-maven-plugin.version}</version>
 				</plugin>
 				<plugin>
-					<groupId>org.fornax.toolsupport</groupId>
-					<artifactId>fornax-oaw-m2-plugin</artifactId>
-					<version>${fornax-oaw-m2-plugin.version}</version>
-				</plugin>
-				<plugin>
-					<groupId>org.eclipse.xtend</groupId>
-					<artifactId>xtend-maven-plugin</artifactId>
-					<version>${xtend-maven-plugin.version}</version>
+					<groupId>org.codehaus.mojo</groupId>
+					<artifactId>exec-maven-plugin</artifactId>
+					<version>${exec-maven-plugin-version}</version>
 					<executions>
 						<execution>
+							<phase>generate-sources</phase>
 							<goals>
-								<goal>compile</goal>
+								<goal>java</goal>
 							</goals>
 						</execution>
 					</executions>
 					<configuration>
-						<!-- need to prefix by basedir to generate to currently built module -->
-						<outputDirectory>${basedir}/xtend-gen</outputDirectory>
+						<skip>${skip.mwe2}</skip>
+						<includeProjectDependencies>false</includeProjectDependencies>
+						<includePluginDependencies>true</includePluginDependencies>
+						<mainClass>org.eclipse.emf.mwe2.launch.runtime.Mwe2Launcher</mainClass>
+						<arguments>
+							<argument>file://${project.basedir}/${mwe2.relative.path}</argument>
+						</arguments>
 					</configuration>
 					<dependencies>
-						<!-- these dependencies are contributed in Eclipse by the "Xtend Library" 
-							classpath container -->
+						<dependency>
+							<groupId>org.eclipse.xtext</groupId>
+							<artifactId>org.eclipse.xtext.xtext</artifactId>
+							<version>${xtext-version}</version>
+						</dependency>
+						<dependency>
+							<groupId>org.eclipse.xtext</groupId>
+							<artifactId>org.eclipse.xtext.xbase</artifactId>
+							<version>${xtext-version}</version>
+						</dependency>
+					</dependencies>
+				</plugin>
+				<plugin>
+					<groupId>org.eclipse.xtend</groupId>
+					<artifactId>xtend-maven-plugin</artifactId>
+					<version>${xtend-maven-plugin-version}</version>
+					<executions>
+						<execution>
+							<goals>
+								<goal>compile</goal>
+								<goal>xtend-install-debug-info</goal>
+								<goal>testCompile</goal>
+								<goal>xtend-test-install-debug-info</goal>
+							</goals>
+						</execution>
+					</executions>
+					<configuration>
+						<outputDirectory>${project.basedir}/xtend-gen</outputDirectory>
+					</configuration>
+					<dependencies>
 						<dependency>
 							<groupId>org.eclipse.xtend</groupId>
 							<artifactId>org.eclipse.xtend.lib</artifactId>
-							<version>${xtend-library.version}</version>
+							<version>${xtend-library-version}</version>
 							<type>pom</type>
 						</dependency>
 					</dependencies>
@@ -248,6 +296,19 @@
 			</plugins>
 		</pluginManagement>
 	</build>
+
+	<!-- to resolve this warning "[WARNING] Unable to locate Source XRef to 
+		link to - DISABLED". With this warning PMD validation will work fine. -->
+	<reporting>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jxr-plugin</artifactId>
+				<version>${maven-jxr-plugin.version}</version>
+			</plugin>
+		</plugins>
+	</reporting>
+
 	<profiles>
 		<profile>
 			<id>local-build</id>
@@ -389,7 +450,7 @@
 				</os>
 			</activation>
 			<properties>
-				<ui.test.vmargs>-Xmx512m -XX:MaxPermSize=256m -XstartOnFirstThread</ui.test.vmargs>
+				<ui.test.vmargs>-XstartOnFirstThread</ui.test.vmargs>
 			</properties>
 		</profile>
 		<profile>
@@ -401,8 +462,108 @@
 				</os>
 			</activation>
 			<properties>
-				<ui.test.vmargs>-Xmx512m -XX:MaxPermSize=256m</ui.test.vmargs>
+				<ui.test.vmargs></ui.test.vmargs>
 			</properties>
+		</profile>
+		<profile>
+			<id>sonarLocal</id>
+			<properties>
+				<sonar.jdbc.url>jdbc:mysql://localhost:3306/sonar?useUnicode=true&amp;characterEncoding=utf8</sonar.jdbc.url>
+				<sonar.jdbc.driverClassName>com.mysql.jdbc.Driver</sonar.jdbc.driverClassName>
+				<sonar.jdbc.username>sonar</sonar.jdbc.username>
+				<sonar.jdbc.password>sonar</sonar.jdbc.password>
+				<sonar.host.url>http://localhost:9000/</sonar.host.url>
+				<sonar.java.source>1.6</sonar.java.source>
+				<sonar.java.target>1.6</sonar.java.target>
+				<sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
+				<sonar.skippedModules>org.eclipse.xtext.example.fowlerdsl.targetplatform,org.eclipse.xtext.example.fowlerdsl.parent,org.eclipse.xtext.example.fowlerdsl.mm,org.mod4j.dsl.businessdomain.mm,org.eclipse.xtext.example.fowlerdsl.testhelper</sonar.skippedModules>
+			</properties>
+		</profile>
+		<profile>
+			<id>sonarRemote</id>
+			<properties>
+				<sonar.jdbc.url>jdbc:mysql://ec2-50-19-206-165.compute-1.amazonaws.com:3306/sonar?useUnicode=true&amp;characterEncoding=utf8</sonar.jdbc.url>
+				<sonar.jdbc.driverClassName>com.mysql.jdbc.Driver</sonar.jdbc.driverClassName>
+				<sonar.jdbc.username>sonar</sonar.jdbc.username>
+				<sonar.jdbc.password>sonar</sonar.jdbc.password>
+				<sonar.host.url>http://ec2-50-19-206-165.compute-1.amazonaws.com:9000/sonar</sonar.host.url>
+				<sonar.java.source>1.6</sonar.java.source>
+				<sonar.java.target>1.6</sonar.java.target>
+				<sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
+				<sonar.skippedModules>org.eclipse.xtext.example.fowlerdsl.targetplatform,org.eclipse.xtext.example.fowlerdsl.parent,org.eclipse.xtext.example.fowlerdsl.mm,org.mod4j.dsl.businessdomain.mm,org.eclipse.xtext.example.fowlerdsl.testhelper</sonar.skippedModules>
+			</properties>
+		</profile>
+		<profile>
+			<id>noCodeCoverage</id>
+			<activation>
+				<property>
+					<name>!codeCoverage</name>
+				</property>
+			</activation>
+			<properties>
+				<coverageAgent></coverageAgent>
+			</properties>
+		</profile>
+		<profile>
+			<id>codeCoverage</id>
+			<properties>
+				<jacoco.propertyName>coverageAgent</jacoco.propertyName>
+				<jacoco.append>true</jacoco.append>
+				<jacoco.destFile>${session.executionRootDirectory}/../org.eclipse.xtext.example.fowlerdsl.parent/target/jacoco.exec</jacoco.destFile>
+				<jacoco.it.destFile>${session.executionRootDirectory}/../org.eclipse.xtext.example.fowlerdsl.parent/target/jacoco_it.exec</jacoco.it.destFile>
+				<!--jacoco.sessionId>junit4runnerSession</jacoco.sessionId -->
+				<!--jacoco.dumpOnExit>true</jacoco.dumpOnExit -->
+				<!--jacoco.output>file</jacoco.output -->
+				<!--jacoco.address>localhost</jacoco.address -->
+				<!--jacoco.port>9999</jacoco.port -->
+				<sonar.core.codeCoveragePlugin>jacoco</sonar.core.codeCoveragePlugin>
+				<sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
+				<sonar.jacoco.reportPath>${jacoco.destFile}</sonar.jacoco.reportPath>
+				<sonar.surefire.reportsPath>../${project.artifactId}.tests/target/surefire-reports/</sonar.surefire.reportsPath>
+				<sonar.jacoco.itReportPath>${jacoco.it.destFile}</sonar.jacoco.itReportPath>
+			</properties>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.jacoco</groupId>
+						<artifactId>jacoco-maven-plugin</artifactId>
+						<version>${jacoco-maven-plugin.version}</version>
+						<executions>
+							<execution>
+								<id>pre-unit-test</id>
+								<goals>
+									<goal>prepare-agent</goal>
+								</goals>
+							</execution>
+							<execution>
+								<id>pre-integration-test</id>
+								<phase>pre-integration-test</phase>
+								<goals>
+									<goal>prepare-agent</goal>
+								</goals>
+								<configuration>
+									<destFile>${jacoco.it.destFile}</destFile>
+									<propertyName>it.coverage.argLine</propertyName>
+								</configuration>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+		<profile>
+			<id>yourkit-profile</id>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-surefire-plugin</artifactId>
+						<configuration>
+							<argLine>-agentpath:"${yourkit.home}\bin\win32\yjpagent.dll"</argLine>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
 		</profile>
 	</profiles>
 
